// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A few items 1`] = `
HTMLCollection [
  <aside
    class="s-ZVitxLYKaOVI"
    style="left: 25%; top: 25%; --size: 130px; animation: __svelte_4004126939_0 150ms linear 0ms 1 both;"
  >
     
    <ul
      class="s-ZVitxLYKaOVI"
      role="menu"
    >
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_3505074470_0 150ms linear 0ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              home
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_3890762829_0 150ms linear 112.5ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
          secondary="true"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              settings
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
    </ul>
     
  </aside>,
  <button
    class="has-text s-NMyTiX1zi6rz"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      
      <span
        class="text s-NMyTiX1zi6rz"
      >
        Close
      </span>
      
    </div>
     
  </button>,
]
`;

exports[`More items 1`] = `
HTMLCollection [
  <aside
    class="s-ZVitxLYKaOVI"
    style="left: 25%; top: 25%; --size: 180px; animation: __svelte_4004126939_0 150ms linear 0ms 1 both;"
  >
     
    <ul
      class="s-ZVitxLYKaOVI"
      role="menu"
    >
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_3019659111_0 150ms linear 0ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              home
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_1277330016_0 150ms linear 112.5ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
          secondary="true"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              settings
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_2128706359_0 150ms linear 225ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
          secondary="true"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              face
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_4140758231_0 150ms linear 337.5ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              lock
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_63569755_0 150ms linear 450ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              flip
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_4220652078_0 150ms linear 562.5ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              shuffle
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_2315107558_0 150ms linear 675ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              rotate_left
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
    </ul>
     
  </aside>,
  <button
    class="has-text s-NMyTiX1zi6rz"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      
      <span
        class="text s-NMyTiX1zi6rz"
      >
        Close
      </span>
      
    </div>
     
  </button>,
]
`;

exports[`No items 1`] = `
HTMLCollection [
  <aside
    class="s-ZVitxLYKaOVI"
    style="left: 25%; top: 25%; --size: 110px; animation: __svelte_4004126939_0 150ms linear 0ms 1 both;"
  >
    <span
      class="no-actions s-ZVitxLYKaOVI"
      style="animation: __svelte_3516408220_0 400ms linear 150ms 1 both;"
    >
      Rien pour cette sélection
    </span>
     
    <ul
      class="s-ZVitxLYKaOVI"
      role="menu"
    />
     
  </aside>,
  <button
    class="has-text s-NMyTiX1zi6rz"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      
      <span
        class="text s-NMyTiX1zi6rz"
      >
        Close
      </span>
      
    </div>
     
  </button>,
]
`;
